[build-system]
requires = ["poetry>=0.12", "setuptools>=40.8.0"]
build-backend = "poetry.masonry.api"

[tool]
[tool.poetry]
name = "dv-utils"
version = "1.1.0"
description = "Datavillage python utils for building algorithm running in confidential environment"
authors = ["Arne Goeteyn <arne@datavillage.ai>"]
readme = "README.md"
repository = "https://github.com/datavillage-me/dv-utils"

[tool.poetry.dependencies]
python = ">=3.10.4,<4"
rdflib = "*"
python-decouple = "*"
requests = "*"
redis = "*"
types-requests = "*"
types-redis = "*"
mkdocs = "^1.3.1"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.1"
mkdocs-material = "^8.4.2"
httpx = "^0.24.0"
oauth2client = "^4.1.3"
google-api-python-client =" ^2.113.0"
soda-core = "^3.3.10"
duckdb = "^1.0.0"
datacontract-cli = "^0.10.14"
pyyaml = "6.0.1"
cloudscraper = "*"



[tool.poetry.dev-dependencies]
mypy = "*"
pylint = "*"
coverage = "*"
black = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"

[tool.pylint.format]
max-line-length=139

[tool.pylint.master]
extension-pkg-whitelist = ["pydantic"]

disable=[
   'logging-fstring-interpolation',
#	'broad-except',
#        'C0114', #missing-module-docstring
#        'C0115', #missing-class-docstring
#        'C0116', #missing-function-docstring
]


